--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -10,28 +10,25 @@
 // );
 
 @font-face {
-  font-family: "Roboto Mono", monospace;
+  font-family: 'Roboto Mono', monospace;
   font-style: normal;
   font-weight: 300;
-  src: local("Roboto Mono"),
-    url(/public/fonts/RobotoMono-Light.ttf) format("ttf");
+  src: local('Roboto Mono'), url(/public/fonts/RobotoMono-Light.ttf) format('ttf');
 }
 @font-face {
-  font-family: "Roboto Mono", monospace;
+  font-family: 'Roboto Mono', monospace;
   font-style: normal;
   font-weight: 400;
-  src: local("Roboto Mono"),
-    url(/puclic/fonts/RobotoMono-Regular.ttf) format("ttf");
+  src: local('Roboto Mono'), url(/puclic/fonts/RobotoMono-Regular.ttf) format('ttf');
 }
 @font-face {
-  font-family: "Roboto Mono", monospace;
+  font-family: 'Roboto Mono', monospace;
   font-style: normal;
   font-weight: 700;
-  src: local("Roboto Mono"),
-    url(/public/fonts/RobotoMono-Bold.ttf) format("ttf");
+  src: local('Roboto Mono'), url(/public/fonts/RobotoMono-Bold.ttf) format('ttf');
 }
 
 * {
-  font-family: "Roboto Mono", monospace;
+  font-family: 'Roboto Mono', monospace;
   box-sizing: border-box;
 }
